--- a/deplacements/pom.xml
+++ b/deplacements/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>fr.java.medical</groupId>
+	<groupId>org.example.</groupId>
 	<artifactId>deplacements</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>deplacements</name>
