--- a/infirmiers/pom.xml
+++ b/infirmiers/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>fr.java.medical</groupId>
+	<groupId>fr.java</groupId>
 	<artifactId>infirmiers</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>infirmiers</name>
