--- a/patients/pom.xml
+++ b/patients/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>fr.java.medical</groupId>
+	<groupId>fr.microservices</groupId>
 	<artifactId>patients</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>patients</name>
